further improvements to monitor tools impl